APIs V1 cleanup (#3892)
* APIs V1 cleanup

* Add v1 methods back to avoid breaking preview

* Update SitesServiceInternalImpl tests

* Add missing annotations to service method

* Check for global site id in getContentAsResource

* Remove old unused upgrader